# movie_review_sentiment_ai

./: docker-compose.yml  main.py  pyproject.toml  train_model.py
