[project]
name = "sentiment-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.7",
    "fastapi>=0.139.0",
    "joblib>=1.5.3",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "uvicorn>=0.51.0",
]
